Basic authing added for Game
